# tau-subagents

./: .gitignore  HANDOFF-boundary-audit.md  HANDOFF.md  LICENSE  README.md  agents.py  agents_menu.py  extension.py  prompts.py  pyproject.toml  schedule.py  worktree.py
.github/workflows/: ci.yml  publish.yml
src/tau_subagents/: agents.py  agents_menu.py  cron.py  extension.py  group_join.py  memory.py  notification_render.py  output_file.py  prompts.py  schedule_store.py  settings.py
src/tau_subagents/ui/: __init__.py  controller.py  strip.py  viewer.py
tests/: test_extension.py  test_integration_tui.py  test_schedule.py  test_ui.py
